--- a/Tema3-FormularioStackPanel/MainWindow.xaml
+++ b/Tema3-FormularioStackPanel/MainWindow.xaml
@@ -7,19 +7,37 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <StackPanel>
-        <StackPanel Margin="20">
-            <TextBlock Text="Nombre" FontSize="16" FontWeight="Bold" Margin="2,5,2,5"/>
-            <TextBox/>
+        <StackPanel Margin="20" Height="60">
+            <StackPanel.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFEE6363" Offset="0"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </StackPanel.Background>
+            <TextBlock Text="Nombre" FontSize="16" FontWeight="Bold" Margin="5"/>
+            <TextBox Margin="5"/>
         </StackPanel>
-        <StackPanel Margin="20">
-            <TextBlock Text="Dirección" FontSize="16" FontWeight="Bold" Margin="2,5,2,5"/>
-            <TextBox />
+        <StackPanel Margin="20" Height="65">
+            <StackPanel.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF5EDFFB" Offset="0"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </StackPanel.Background>
+            <TextBlock Text="Dirección" FontSize="16" FontWeight="Bold" Margin="5"/>
+            <TextBox Margin="5"/>
         </StackPanel>
-        <StackPanel Margin="20">
-            <TextBlock Text="Correo electrónico" FontSize="16" FontWeight="Bold" Margin="2,5,2,5"/>
-            <TextBox />
+        <StackPanel Margin="20" Height="60">
+            <StackPanel.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF8562FF" Offset="0"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </StackPanel.Background>
+            <TextBlock Text="Correo electrónico" FontSize="16" FontWeight="Bold" Margin="5"/>
+            <TextBox Width="740"  Margin="5"  HorizontalAlignment="Left"/>
         </StackPanel >
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="20">
+        <StackPanel Orientation="Horizontal" Margin="20" HorizontalAlignment="Right">
             <Button Content="Aceptar" Width="100" Margin="5"/>
             <Button Content="Cancelar" Width="100" Margin="5"/>
         </StackPanel>
