--- a/Tema3-FormularioStackPanel/MainWindow.xaml
+++ b/Tema3-FormularioStackPanel/MainWindow.xaml
@@ -6,6 +6,20 @@
         xmlns:local="clr-namespace:Tema3_FormularioStackPanel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" MinWidth="400" MaxHeight="400">
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBlock}">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Width" Value="100"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+        <Style TargetType="{x:Type TextBox}">
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+    </Window.Resources>
     <StackPanel>
         <StackPanel Margin="20" Height="60">
             <StackPanel.Background>
@@ -14,8 +28,8 @@
                     <GradientStop Color="White" Offset="1"/>
                 </LinearGradientBrush>
             </StackPanel.Background>
-            <TextBlock Text="Nombre" FontSize="16" FontWeight="Bold" Margin="5"/>
-            <TextBox Margin="5"/>
+            <TextBlock Text="Nombre"/>
+            <TextBox/>
         </StackPanel>
         <StackPanel Margin="20" Height="65">
             <StackPanel.Background>
@@ -24,8 +38,8 @@
                     <GradientStop Color="White" Offset="1"/>
                 </LinearGradientBrush>
             </StackPanel.Background>
-            <TextBlock Text="Dirección" FontSize="16" FontWeight="Bold" Margin="5"/>
-            <TextBox Margin="5"/>
+            <TextBlock Text="Dirección"/>
+            <TextBox/>
         </StackPanel>
         <StackPanel Margin="20" Height="60">
             <StackPanel.Background>
@@ -34,12 +48,12 @@
                     <GradientStop Color="White" Offset="1"/>
                 </LinearGradientBrush>
             </StackPanel.Background>
-            <TextBlock Text="Correo electrónico" FontSize="16" FontWeight="Bold" Margin="5"/>
-            <TextBox Width="740"  Margin="5"  HorizontalAlignment="Left"/>
+            <TextBlock Text="Correo electrónico"/>
+            <TextBox Width="740" HorizontalAlignment="Left"/>
         </StackPanel >
         <StackPanel Orientation="Horizontal" Margin="20" HorizontalAlignment="Right">
-            <Button Content="Aceptar" Width="100" Margin="5"/>
-            <Button Content="Cancelar" Width="100" Margin="5"/>
+            <Button Content="Aceptar"/>
+            <Button Content="Cancelar"/>
         </StackPanel>
     </StackPanel>
 </Window>
