--- a/Tema3-FormularioStackPanel/MainWindow.xaml
+++ b/Tema3-FormularioStackPanel/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" MinWidth="400" MaxHeight="400">
     <Window.Resources>
+        <Style TargetType="{x:Type StackPanel}" x:Key="Form">
+            <Setter Property="Margin" Value="20"/>
+            <Setter Property="Height" Value="60"/>
+        </Style>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -21,7 +25,7 @@
         </Style>
     </Window.Resources>
     <StackPanel>
-        <StackPanel Margin="20" Height="60">
+        <StackPanel Style="{StaticResource Form}">
             <StackPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFEE6363" Offset="0"/>
@@ -31,7 +35,7 @@
             <TextBlock Text="Nombre"/>
             <TextBox/>
         </StackPanel>
-        <StackPanel Margin="20" Height="65">
+        <StackPanel Style="{StaticResource Form}">
             <StackPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF5EDFFB" Offset="0"/>
@@ -41,7 +45,7 @@
             <TextBlock Text="Dirección"/>
             <TextBox/>
         </StackPanel>
-        <StackPanel Margin="20" Height="60">
+        <StackPanel Style="{StaticResource Form}">
             <StackPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF8562FF" Offset="0"/>
